# BplusTree

./: .gitignore  ClassDocument.md  CodeLog.md  DevPlan.md  Funclib开发计划.md  README.md  RPCDesign.md  Training.sln  todo.md  对协程的理解.docx
src/: Btree.cpp  Btree.hpp  BtreeAll.hpp  BtreeHelper.cpp  BtreeHelper.hpp  BtreeTest.cpp  CMakeLists.txt  CMakeLists_OnLinuxSample.txt  CommonFlag.hpp  DoAdd.cpp  DoAdd.hpp  Elements.cpp  Elements.hpp  ElementsTest.cpp  FlyTest.hpp  Generator.cpp  Generator.hpp  LeafNode.hpp  Main.cpp  MiddleNode.hpp  Node.cpp  Node.hpp  NodeBase.hpp  NodeBaseCrtp.hpp  NodeTest.cpp  Proxy.hpp  README.md  SiblingFunc.hpp  TestSuite.cpp  TestSwitch.hpp  Util.hpp  main.cpp  test.cpp  utility.hpp
src/Basic/: Concepts.hpp  Debug.cpp  Debug.hpp  Exception.cpp  Exception.hpp  StringViewUtil.cpp  StringViewUtil.hpp  TypeTrait.hpp
src/Btree/: Basic.hpp  Btree.hpp  CallbackFrom.hpp  Cloner.hpp  ClonerDeclare.hpp  CollectionException.hpp  Elements.hpp  Enumerator.hpp  EnumeratorPipeline.hpp  Exception.hpp  Generator.cpp  Generator.hpp  GetNodeType.hpp  IEnumerator.hpp  LeafNode.hpp  LiteVector.hpp  MiddleNode.hpp  NodeAddRemoveCommon.hpp  NodeBase.hpp  NodeBaseCrtp.hpp  NodeFactory.hpp  SiblingFunc.hpp  TreeInspector.hpp  TypeConfig.hpp  UniversalEnumerator.hpp  UniversalMover.hpp  Util.hpp
src/Btree/Test/: BtreeTest.cpp  ElementsTest.cpp  LiteVectorTest.cpp  MemoryMemo.cpp  MemoryMemo.hpp  NodeTest.cpp  TestSuite.hpp  Util.hpp  Utility.hpp
src/Client/: TestFuncDef.cpp  TestInvokerFactory.hpp
src/Client/Demo/: Main.cpp
src/Client/Test1/: Main.cpp
src/Client/Test2/: Main.cpp
src/Client/Test3/: Main.cpp
src/Cmd/: CmdUI.hpp  Cmder.hpp  Main.cpp  Main_Unix.hpp  Main_Win.hpp  Main_macOS.hpp  StringMatcher.hpp
src/Coroutine/: Compiler.hpp
src/FuncLib/: AddrManager.hpp  BtreeConverter.hpp  ByteConverter.hpp  ByteConverter_DiskPos.hpp  ByteConverter_DiskPtr.hpp  ByteConverter_DiskRef.hpp  ByteConverter_basic.hpp  CompileProcess.hpp  Compiler.hpp  ConvertToDiskType.hpp  CurrentFile.hpp  DiskAllocator.hpp  DiskBtreeConverter.hpp  DiskDataConverter.hpp  DiskPos.hpp  DiskPtr.hpp  DiskReader.hpp  DiskRef.hpp  File.cpp  File.hpp  FileAddr.hpp  FileCache.hpp  FileResource.cpp  FileResource.hpp  FileUtil.hpp  FriendFuncLibDeclare.hpp  FuncBinaryLib.cpp  FuncBinaryLib.hpp  FuncBinaryLibIndex.cpp  FuncBinaryLibIndex.hpp  FuncBodyLib.hpp  FuncBodyLibIndex.hpp  FuncDefTokenReader.cpp  FuncDefTokenReader.hpp  FuncObj.hpp  FuncType.hpp  FunctionLibrary.cpp  FunctionLibrary.hpp  GetDiskPos.hpp  ICacheItemManager.hpp  (+16 more)
src/FuncLib/Compile/: AppendCode.hpp  CompileProcess.cpp  CompileProcess.hpp  FuncDefTokenReader.cpp  FuncDefTokenReader.hpp  FuncObj.hpp  FuncType.cpp  FuncType.hpp  FuncsDefReader.cpp  FuncsDefReader.hpp  Invoke.cpp  Invoke.hpp  ParseFunc.cpp  ParseFunc.hpp  SharedLibrary.cpp  SharedLibrary.hpp  Unity.hpp  Util.cpp  Util.hpp
src/FuncLib/Persistence/: ByteConverter.hpp  ByteConverter_DiskPos.hpp  ByteConverter_DiskPtr.hpp  ByteConverter_DiskRef.hpp  ByteConverter_basic.hpp  DiskPos.hpp  DiskPtr.hpp  DiskRef.hpp  FriendFuncLibDeclare.hpp  IWriterConcept.hpp  IWriterIReaderConcept.hpp  OwnerState.hpp  PtrSetter.hpp  StructToTuple.hpp  Switch.hpp  TakeWithDiskPos.hpp  TypeConverter.hpp
src/FuncLib/Store/: CacheSearchRoutine.hpp  F.hpp  FakeFileStream.hpp  FakeObjectBytes.cpp  FakeObjectBytes.hpp  FakeWriter.cpp  FakeWriter.hpp  File.cpp  File.hpp  FileByteMover.cpp  FileByteMover.hpp  FileCache.cpp  FileCache.hpp  FileReader.cpp  FileReader.hpp  FileResource.cpp  FileResource.hpp  FileWriter.cpp  FileWriter.hpp  FreeNodes.hpp  Generator.hpp  IInsidePositionOwner.hpp  IWriterConcept.hpp  InsidePositionOwner.cpp  InsidePositionOwner.hpp  LabelNode.cpp  LabelNode.hpp  LabelNodeBase.hpp  LabelRelationNode.cpp  LabelRelationNode.hpp  LabelTree.cpp  LabelTree.hpp  LableRelationNode.cpp  LableRelationNode.hpp  LableTree.cpp  LableTree.hpp  NonTypeInsidePositionOwner.cpp  NonTypeInsidePositionOwner.hpp  ObjectBytes.cpp  ObjectBytes.hpp  (+20 more)
src/FuncLib/Test/: ByteConvereterTest_Gen.cpp  ByteConverterTest.cpp  CompileTest.cpp  DiskBtreeTest.cpp  DiskPtrTest.cpp  FileCacheTest.cpp  FileReader&FileWriterTest.cpp  FileReader&ObjectWriterTest.cpp  FileReaderObjectBytesTest.cpp  FileTest.cpp  FunctionLibraryTest.cpp  LabelNodeTest.cpp  LabelRelationNodeTest.cpp  ObjectRelationTreeTest.cpp  StorageAllocatorTest.cpp  StringReader.hpp  TestSuite.hpp  TypeConverterTest.cpp  Util.cpp  Util.hpp
src/Json/: Exception.cpp  Exception.hpp  Json.cpp  Json.hpp  JsonConverter.hpp  LocationInfo.cpp  LocationInfo.hpp  ParseException.cpp  ParseException.hpp  Parser.cpp  Parser.hpp  Serial.hpp  Temp.hpp
src/Log/: Curry.hpp  FormatMap.hpp  FormatParser.hpp  Logger.hpp
src/Logger/: Curry.hpp  FormatMap.hpp  FormatParser.hpp  Logger.hpp
src/Network/: IoContext.hpp  Login.hpp  NetworkAcceptor.hpp  Request.cpp  Request.hpp  Socket.hpp  Util.hpp
src/RemoteInvokeLib/: Predefine.hpp  RemoteInvoker.hpp  TypeToString.hpp
src/Server/: AccountManager.hpp  AdminService.hpp  Awaiter.hpp  AwaiterVoid.hpp  BasicType.hpp  BusinessAcceptor.hpp  ClientService.hpp  CmdFunction.hpp  CmdMetaData.hpp  CmdMetadata.hpp  CurryLogger.hpp  FuncLibWorker.hpp  IOContext.hpp  InvokeWorker.hpp  IoContext.hpp  LoginInfo.hpp  NetworkAcceptor.hpp  PredefineHeader.hpp  Request.cpp  Request.hpp  RequestHandler.hpp  RequestId.hpp  RequestListener.hpp  RequestQueue.hpp  RequestResponder.hpp  Responder.hpp  Server.hpp  ServiceBase.hpp  Socket.hpp  ThreadPool.hpp  Util.hpp  promise_Void.hpp
src/Server/Test/: Task.hpp  (+5 more)
src/TestCodeGen/: BasicType.cs  CodeSnippet.cs  CompoundType.cs  IType.cs  NonType.cs  Program.cs  Section.cs  Template.cs  TemplateSpecificationType.cs  TestCase.cs  TestCodeGen.csproj  TestFile.cs  Type.cs  TypeFactory.cs
src/TestFrame/: Exception.hpp  FlyTest.hpp  Util.hpp
src/TreeCodeGen/: TreeCodeGen.html  edit_base.js  edit_mode.js  entire_edit.js  main.js  node.js  part_edit.js  tree_edit_ui.js  util.js
src/test/: BtreeTest.cpp  ElementsTest.cpp  FlyTest.hpp  Main.cpp  NodeTest.cpp  TestSuite.hpp
(+54 files in other folders)
